- esempio di tabella con struttura nuova in libreria oggetti - inizializzazione dropdown perché vengano spostate nel body anziché all'interno di una tabella specifica (risoluzione bug overflow con tabelle da una sola riga).

--- a/librerie/youwebbusiness/fe/sass/layout/_bootstrap_rewrite.scss
+++ b/librerie/youwebbusiness/fe/sass/layout/_bootstrap_rewrite.scss
@@ -53,7 +53,18 @@ html, body {
   width:66.6666%!important
 }
 
-.dropdown-item.active,
-.dropdown-item:active {
-  background: $greenLink;
+.dropdown-item,
+a.dropdown-item,
+a.dropdown-item:hover,
+a.dropdown-item:not(.btn) {
+  &, &:hover {
+    font-size: 14px;
+    color: $grayMid !important;
+    text-decoration: none;
+    &.active,
+    &:active {
+      background: $greenLink !important;
+      color: $white !important;
+    }
+  }
 }
