--- a/librerie/youwebbusiness/html_statico/fe/css/priv_base.css
+++ b/librerie/youwebbusiness/html_statico/fe/css/priv_base.css
@@ -738,9 +738,32 @@ html, body {
   width: 66.6666% !important;
 }
 
-.dropdown-item.active,
-.dropdown-item:active {
-  background: #2F9988;
+.dropdown-item, .dropdown-item:hover,
+a.dropdown-item,
+a.dropdown-item:hover,
+a.dropdown-item:hover,
+a.dropdown-item:hover:hover,
+a.dropdown-item:not(.btn),
+a.dropdown-item:not(.btn):hover {
+  font-size: 14px;
+  color: #666666 !important;
+  text-decoration: none;
+}
+.dropdown-item.active, .dropdown-item:active, .dropdown-item:hover.active, .dropdown-item:hover:active,
+a.dropdown-item.active,
+a.dropdown-item:active,
+a.dropdown-item:hover.active,
+a.dropdown-item:hover:active,
+a.dropdown-item:hover.active,
+a.dropdown-item:hover:active,
+a.dropdown-item:hover:hover.active,
+a.dropdown-item:hover:hover:active,
+a.dropdown-item:not(.btn).active,
+a.dropdown-item:not(.btn):active,
+a.dropdown-item:not(.btn):hover.active,
+a.dropdown-item:not(.btn):hover:active {
+  background: #2F9988 !important;
+  color: #FFFFFF !important;
 }
 
 /* Tag generici */
